apps/staging/steward/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steward
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: ghcr.io/profianinc/steward:0.3.0
        name: steward
